--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hello World</title>
-		<link rel="stylesheet" type="text/css" href="./reset.css">
-		<link rel="stylesheet" type="text/css" href="./style.css">
-	</head>
+<head>
+	<title>Maria Reinbach</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 <body>
-	<div class="content-wrap">
 	<header>
-			<h1>Example One Page</h1>
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="./test.html">Test</a>
-				<a href="http://google.com">Google</a>
-			</nav>
-		</header>
-		<main>
-			<br>
-			main
-			<br>
-			main
-			<br>
-			main
-			<br>
-			main
-		</main>
-	</div>
-	<footer>
-		Footer
-	</footer>
-</body>
-</html>
+		<div class="cwrap">
+			<h1 class="headfont">Maria Reinbach</h1>
+			<nav class="nav-col">
+				<ul>
+					<li><a id="about" href="index.html">About</a></li>
+					<li><a id="portfolio" href="portfolio.html">Portfolio</a></li>
+					<li><a id="contact" href="contact.html">Contact</a></li>
+				</ul>
+			</nav>	
+		</div>
+	</header>
+	<main>
+		<div class="cwrap">
+			<div class="about">
+				<h2 class="about-head headfont">About Me</h2>
+				<hr>
+				<br>
+				<div class="about-container">
+					<div class="about-text-float">
+						<img class="about-img" src="assets/images/Maria-Profile.jpeg" alt="Profile Pic">
+					</div>
+					<p class="about-text">An enthusiastic self-motivated individual with a passion for technology! I love learning new systems and tools. I currently work at San Diego Gas and Electric as an Information Technologist in the Collaboration Services department. My team manages our enterprise SharePoint 2010 (soon to be upgraded to 2016) as well as SharePoint Online (Office 365) environments. I aspire to transition into a software developer role with the completion of the UCSD bootcamp! 
+						<br><br>
+						I am a blessed woman to my best friend Brian. My son is 26 years old son and has an 11 month old daughter named Eeva. She is just pure joy! I am blessed with great friends, a great job, a cozy home, and 2 awesome dogs. I love the outdoors, fitness, volunteering at church, and studying the bible.</p>
+					</div>				
+				</div>
+				<div class="connect">
+					<h2 class="connect-head headfont">Connect with Me</h2>
+					<hr>
+					<br>
+					<div class="social-icons">
+						<a href="https://github.com/aguirremra" target="_blank"><img class="git" src="assets/images/github.png" alt="github"/></a>
+						<a href="https://www.linkedin.com/in/maria-reinbach/" target="_blank"><img class="linkedin" src="assets/images/linkedin.png" alt="li"/></a>
+						<a href="https://stackoverflow.com/users/8213701/maria-reinbach" target="_blank"><img class="stack" src="assets/images/stackoverflow.png" alt="so"/></a>
+					</div>
+				</div>
+			</main>
+			<footer>
+				<div class="cwrap">
+					Copyright 2017 Maria Reinbach
+				</div>
+			</footer>
+		</body>
+		</html>
