--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<img class="about-img" src="assets/images/Maria-Profile.jpeg" alt="Profile Pic">
 					</div>
 					<p class="about-text">An enthusiastic self-motivated individual with a passion for technology! I love learning new systems and tools. I currently work at San Diego Gas and Electric as an Information Technologist in the Collaboration Services department. My team manages our enterprise SharePoint 2010 (soon to be upgraded to 2016) as well as SharePoint Online (Office 365) environments. I aspire to transition into a software developer role with the completion of the UCSD bootcamp! 
-						<br><br>
-						I am a blessed woman to my best friend Brian. My son is 26 years old son and has an 11 month old daughter named Eeva. She is just pure joy! I am blessed with great friends, a great job, a cozy home, and 2 awesome dogs. I love the outdoors, fitness, volunteering at church, and studying the bible.</p>
+					<br><br>
+					I am a blessed woman, married to my best friend in the whole world, Brian. My son is 26 years old and has an 11 month old daughter named Eeva. She is just pure joy! I am blessed with great friends, a great job, a cozy home, and 2 awesome dogs. I love the outdoors, fitness, volunteering at church, and studying the bible.</p>
 					</div>				
 				</div>
 				<div class="connect">
